packages/language/src/__tests__/__fixtures__/invalid/missing-timeline.eligian
// No timeline defined - should be a validation error

endable action intro [
  selectElement("#title")
  addClass("visible")
] [
  removeClass("visible")
]
